# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2

  31 Jan 2005; Mike Frysinger <vapier@gentoo.org>:

    Punt the PROTOCOL variable from rc.conf since nothing uses it.

    Punt the consolefont related variables from rc.conf since they've 
    been moved to conf.d/consolefont.

  07 Feb 2005; Martin Schlemmer <azarah@gentoo.org>:

    Fix /sbin/functions.sh not to run stty during 'emerge depend'.

  07 Feb 2005; Roy Marples <uberlord@gentoo.org>:

    netmask2cidr now works correctly - fixes #81119
    Thanks to Benoit Boissinot for the patch

  06 Feb 2005; Mike Frysinger <vapier@gentoo.org>:

    Remove the apache user and let apache ebuilds handle it #77738.

  04 Feb 2005; Roy Marples <uberlord@gentoo.org>:

    It's now possible to configure addresses and routes for the loopback
    interface if required - however you cannot override our defaults

    wpa_supplicant and iwconfig now loop for 5 seconds if essid is
    not returned straight away

  31 Jan 2005; Mike Frysinger <vapier@gentoo.org>:

    Fix the test for device-mapper in checkfs #80206.

    Change home of man to /usr/share/man.

* rc-scripts 1.6.9 (30 Jan 2004)

  30 Jan 2005; Mike Frysinger <vapier@gentoo.org>:

    Use clock, don't need it.  Not everyone has a RTC #78997.

    Rewrite the KV_* functions to use pure bash rather than awk #75836.

    Don't use 'none' when mounting virtual filesystems since `umount` can 
    produce some pretty vague output #78684.  Fixed sbin/rc and etc/fstab 
    and etc/halt.sh to handle the new format.

    modules-update.8 touchups by Benno Schulenberg #77582.

    Don't symlink /etc/filesystems since it is an user config file #74176.

    Punt the 'guest' user #74737.

    Add support for loopback dm-crypt by Dylan Carlson #73598 and for gpg 
    dm-crypt by Lars Strojny #75659.

    Update crypto-loop to newer util-linux #40874 by jochen / Jürgen Hötzel.
