@@ -12,9 +12,15 @@ depend() {
 setupopts() {
 	if is_uml_sys ; then
 		TBLURB="UML"
+		fakeit=1
+		return 0
+	elif is_vserver_sys ; then
+		TBLURB="VServer"
+		fakeit=1
 		return 0
 	elif grep -q ' cobd$' /proc/devices ; then
 		TBLURB="coLinux"
+		fakeit=1
 		return 0
 	elif [[ ${CLOCK} == "UTC" ]] ; then
 		myopts="--utc"
@@ -47,7 +53,7 @@ setupopts() {
 start() {
 	local myopts=""
 	local myadj=""
-	local TBLURB=""
+	local TBLURB="" fakeit=0
 	local errstr=""
 	local readonly="no"
 	local ret=0
@@ -61,7 +67,7 @@ start() {
 	setupopts
 
 	ebegin "Setting system clock to hardware clock [${TBLURB}]"
-	if [[ ${TBLURB} == "UML" ]] || [[ ${TBLURB} == "coLinux" ]] ; then
+	if [[ ${fakeit} -eq 1 ]] ; then
 		ret=0
 
 	elif [[ -x /sbin/hwclock ]] ; then
